@@ -307,7 +307,8 @@ public:
 		EXIF_MAKERNOTE_PANASONIC,
 		EXIF_MAKERNOTE_PENTAX,
 		IPTC,
-		GEOTIFF
+		GEOTIFF,
+		ANIMATION
 	};
 
 private:
